[package]
name = "rustmart"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.32"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
wasm-bindgen = "0.2.68"
wasm-logger = "0.2.0"
yew = "0.17.3"
yew-router = "0.14.0"
